# egy-customs

./: .gitignore  api.py  etl.py  main.py  pyproject.toml
.github/workflows/: deploy.yml
web/: components.json  index.html  package.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/: app-sidebar.tsx  search-input.tsx  tariff-detail.tsx  tariff-table.tsx
web/src/components/ui/: breadcrumb.tsx  clickable-badge.tsx  dialog.tsx  select.tsx  sheet.tsx  sidebar.tsx
web/src/lib/: api.ts  chapters.ts  i18n.ts
