[project]
name = "egy-customs"
version = "0.1.0"
description = "Egyptian Customs Tariff Scraper"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.3",
    "lxml>=6.0.4",
    "sqlite-utils>=3.39",
    "uvicorn>=0.44.0",
]
